# directxtextest

./: .gitattributes  .gitignore  CMakeLists.txt  DirectXTexXboxPC.sln  DirectXTexXboxTest_GDK_PC.sln  DirectXTex_Tests_Desktop_2012.sln  DirectXTex_Tests_Desktop_2013.sln  DirectXTex_Tests_Desktop_2015.sln  DirectXTex_Tests_Desktop_2015_Win10.sln  DirectXTex_Tests_Desktop_2017.sln  DirectXTex_Tests_Desktop_2017_Win10.sln  DirectXTex_Tests_Desktop_2019.sln  DirectXTex_Tests_Desktop_2019_Win10.sln  DirectXTex_Tests_Desktop_2022.sln  DirectXTex_Tests_Desktop_2022_Win10.sln  DirectXTex_Tests_Windows10.sln  MSVCCodeCov.cmd.in  README.md
.github/: copilot-instructions.md
bcvalidator/: bcvalidator.cpp  bcvalidator_Desktop_2015.vcxproj  bcvalidator_Desktop_2017.vcxproj  bcvalidator_Desktop_2017.vcxproj.filters  bcvalidator_Desktop_2019.vcxproj  bcvalidator_Desktop_2022.vcxproj
codecov/: MSVCCodeCov.cmd.in  coverage.config.in
compress/: compress.cpp  directxtest.cpp  testutils.cpp  xtcompress_Desktop_2012.vcxproj  xtcompress_Desktop_2013.vcxproj  xtcompress_Desktop_2013.vcxproj.filters  xtcompress_Desktop_2015.vcxproj  xtcompress_Desktop_2015.vcxproj.filters  xtcompress_Desktop_2017.vcxproj  xtcompress_Desktop_2019.vcxproj  xtcompress_Desktop_2022.vcxproj  xtcompress_Desktop_2022.vcxproj.filters  xtcompress_Desktop_2022_Win10.vcxproj
d3d11/: d3d11.cpp  d3d11.fx  directxtest.cpp  hlsl.cmd  testutils.cpp  xtd3d11_Desktop_2012.vcxproj  xtd3d11_Desktop_2013.vcxproj  xtd3d11_Desktop_2013.vcxproj.filters  xtd3d11_Desktop_2015.vcxproj  xtd3d11_Desktop_2015.vcxproj.filters  xtd3d11_Desktop_2015_Win10.vcxproj  xtd3d11_Desktop_2017.vcxproj  xtd3d11_Desktop_2017_Win10.vcxproj  xtd3d11_Desktop_2019.vcxproj  xtd3d11_Desktop_2019.vcxproj.filters  xtd3d11_Desktop_2019_Win10.vcxproj  xtd3d11_Desktop_2022.vcxproj  xtd3d11_Desktop_2022_Win10.vcxproj
d3d11loadtest/: CMakeLists.txt  DeviceResources.cpp  DeviceResources.h  Game.cpp  Game.h  MSAAHelper.cpp  Main.cpp  PixelShader.hlsl  ReadData.h  VertexShader.hlsl  VertexShader11.hlsl  d3d11loadtest_Desktop_2013.vcxproj  d3d11loadtest_Desktop_2015.vcxproj  d3d11loadtest_Desktop_2015_Win10.vcxproj  d3d11loadtest_Desktop_2017.vcxproj  d3d11loadtest_Desktop_2017_Win10.vcxproj  d3d11loadtest_Desktop_2019.vcxproj  d3d11loadtest_Desktop_2019.vcxproj.filters  d3d11loadtest_Desktop_2019_Win10.vcxproj  d3d11loadtest_Desktop_2019_Win10.vcxproj.filters  d3d11loadtest_Desktop_2022.vcxproj  d3d11loadtest_Desktop_2022.vcxproj.filters  d3d11loadtest_Desktop_2022_Win10.vcxproj  d3d11loadtest_Desktop_2022_Win10.vcxproj.filters  pch.h
d3d12/: d3d12.cpp  d3d12.fx  directxtest.cpp  hlsl.cmd  testutils.cpp  xtd3d12_Desktop_2015_Win10.vcxproj  xtd3d12_Desktop_2015_Win10.vcxproj.filters  xtd3d12_Desktop_2017_Win10.vcxproj  xtd3d12_Desktop_2019_Win10.vcxproj  xtd3d12_Desktop_2019_Win10.vcxproj.filters  xtd3d12_Desktop_2022_Win10.vcxproj
d3d12loadtest/: CMakeLists.txt  DeviceResources.cpp  DeviceResources.h  Game.cpp  Game.h  MSAAHelper.cpp  MSAAHelper.h  Main.cpp  PixelShader.hlsl  PixelShader12.hlsl  ReadData.h  d3d12loadtest_Desktop_2015_Win10.vcxproj  d3d12loadtest_Desktop_2015_Win10.vcxproj.filters  d3d12loadtest_Desktop_2017_Win10.vcxproj  d3d12loadtest_Desktop_2019_Win10.vcxproj  d3d12loadtest_Desktop_2022_Win10.vcxproj  d3d12loadtest_Desktop_2022_Win10.vcxproj.filters  pch.h
d3d9loadtest/: CMakeLists.txt  Game.cpp  Game.h  Main.cpp  d3d9loadtest_Desktop_2017.vcxproj  d3d9loadtest_Desktop_2017.vcxproj.filters  d3d9loadtest_Desktop_2019.vcxproj  d3d9loadtest_Desktop_2019.vcxproj.filters  d3d9loadtest_Desktop_2022.vcxproj  pch.h
dds/: dds.cpp  directxtest.cpp  testutils.cpp  xtdds_Desktop_2012.vcxproj  xtdds_Desktop_2013.vcxproj  xtdds_Desktop_2013.vcxproj.filters  xtdds_Desktop_2015.vcxproj  xtdds_Desktop_2015.vcxproj.filters  xtdds_Desktop_2017.vcxproj  xtdds_Desktop_2019.vcxproj  xtdds_Desktop_2022.vcxproj  xtdds_Desktop_2022_Win10.vcxproj
exr/: directxtest.cpp  exr.cpp  testutils.cpp
filter/: coverage.cpp  directxtest.cpp  filter.h  mipmaps.cpp  resize.cpp  testutils.cpp  xtfilter_Desktop_2012.vcxproj  xtfilter_Desktop_2013.vcxproj  xtfilter_Desktop_2013.vcxproj.filters  xtfilter_Desktop_2015.vcxproj  xtfilter_Desktop_2015.vcxproj.filters  xtfilter_Desktop_2017.vcxproj  xtfilter_Desktop_2019.vcxproj  xtfilter_Desktop_2019.vcxproj.filters  xtfilter_Desktop_2022.vcxproj  xtfilter_Desktop_2022.vcxproj.filters  xtfilter_Desktop_2022_Win10.vcxproj
fuzzloaders/: CMakeLists.txt  fuzzloaders.cpp  fuzzloaders_Desktop_2013.vcxproj  fuzzloaders_Desktop_2015.vcxproj  fuzzloaders_Desktop_2017.vcxproj  fuzzloaders_Desktop_2019.vcxproj  fuzzloaders_Desktop_2019.vcxproj.filters  fuzzloaders_Desktop_2022.vcxproj
hdr/: asan-95b6a037-9000-4216-bb69-2ccbfa316b6e.hdr  asan-b8cff6a1-c5fb-4627-a8b1-e8213055d119.hdr  crash-f83c7fbad7278ad0a3d7bf061901d6a459cd5e42.hdr  directxtest.cpp  hdr.cpp  invalid-01cb6b41-3411-439a-9a48-8f798f744559.hdr  invalid-0339f19f-21dd-4885-b10c-3dd8dd26f51c.hdr  invalid-2a4e3976-b8f4-43d2-b8bc-3b5a8ab5143e.hdr  invalid-2e297ff1-c158-49be-9662-3f382e5d1525.hdr  invalid-3f6183fd-dd6e-490c-8e79-c88016897894.hdr  invalid-442a9e69-da01-44e1-80ff-e7751c953b04.hdr  invalid-6a6720f5-4d67-4db8-8247-27cecf56a808.hdr  invalid-83ecd67e-9602-49d3-9132-abdfcf7b8f65.hdr  invalid-8831bd45-88f0-4cd8-90fc-2bbf5504f151.hdr  invalid-8c48054d-d089-4eba-a486-5e8d6c786952.hdr  invalid-9d5f0451-2888-4316-8874-e768250a0f8b.hdr  invalid-aeaee475-440d-44eb-a80d-1c23656e2bbc.hdr  invalid-c8080ded-9506-4d66-bb01-cc0572a9e196.hdr  testutils.cpp  xthdr_Desktop_2013.vcxproj  (+15 more)
standalonetest/: CMakeLists.txt  CMakePresets.json  main.cpp  test.h  test11.cpp  test12.cpp  test9.cpp
xbox/: CMakeLists.txt  DirectXTexXboxPC.vcxproj  DirectXTexXboxPC.vcxproj.filters  DirectXTexXboxTest_GDK_PC.vcxproj  DirectXTexXboxTest_GDK_PC.vcxproj.filters  dds.cpp  directxtest.cpp  testutils.cpp  tiling.cpp
xbox/Media/: scarlettseafloor.dds  scarletttiny_skin.dds  scarlettwindowslogo.dds  scarlettwindowslogoBC1.dds  xboxTiny_skin.dds  xboxseafloor.dds  xboxwindowslogo.dds  xboxwindowslogoBC1.dds
(+222 files in other folders)
